Re-write of app components reactivity

--- a/src/css/fstage.css
+++ b/src/css/fstage.css
@@ -1,948 +1,3 @@
-:root {
-
-	--body-min-width: 300;
-	--body-max-width: 1600;
-	--body-min-font: 16;
-	--body-max-font: 20;
-
-	--body-line-height: 1.4;
-	--body-vertical-rhythm: calc(var(--body-line-height) * 1em);
-
-	--body-font-family: -apple-system, BlinkMacSystemFont, Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-	--body-font-size: calc((var(--body-min-font) * 1px) + ((var(--body-max-font) - var(--body-min-font)) * ((100vw - (var(--body-min-width) * 1px)) / (var(--body-max-width) - var(--body-min-width)))));
-
-    --body-color: #232D37;
-	--body-background: #FFF;
-
-	--link-color: #0064BD;
-	--link-hover-color: #0095FF;
-	--link-alt-color: #777;
-	--link-alt-hover-color: #777;
-
-	--button-color: var(--body-background);
-	--button-background: #AAA;
-	--button-alt-color: var(--button-background);
-	--button-alt-background: var(--button-color);
-	--button-border-color: rgba(0, 0, 0, 0.25);
-	--button-border-radius: 4px;
-
-	--nav-color: #141412;
-	--nav-background: #EFEFEF;
-	--nav-hover-color: #141412;
-	--nav-hover-background: #E2E2E2;
-	--nav-active-color: var(--body-background);
-	--nav-active-background: #AAA;
-
-	--input-border-radius: 4px;
-	--input-font-size: 1.15rem;
-	--input-border-color: rgba(0, 0, 0, 0.25);
-	--input-hover-color: rgba(0, 0, 0, 0.35);
-	--input-active-color: #0288D1;
-	--input-error-color: #D32F2F;
-
-	--footer-height: 3em;
-	--small-font-size: 0.875em;
-
-}
-
-
-/* BODY */
-
-*, :after, :before {
-	box-sizing: border-box;
-}
-
-* {
-	margin: 0;
-	user-select: text;
-	-webkit-user-select: text;
-	-webkit-touch-callout: none;
-	-webkit-tap-highlight-color: transparent;
-}
-
-* + * {
-	margin-top: var(--body-vertical-rhythm);
-}
-
-header, main, footer, body, body > * + * {
-	margin-top: 0;
-}
-
-html {
-	width: 100%;
-	height: 100%;
-	font-size: 16px;
-	font-size: var(--body-font-size);
-	font-family: var(--body-font-family);
-	line-height: var(--body-line-height);
-	letter-spacing: var(--body-letter-spacing);
-	text-size-adjust: 100%;
-	word-wrap: break-word;
-}
-
-body {
-	width: 100%;
-	min-width: calc(var(--body-min-width) * 1px);
-	min-height: 100%;
-	position: relative;
-	background: var(--body-background);
-	color: var(--body-color);
-	padding: 0;
-	margin: 0;
-}
-
-canvas {
-	margin: 0;
-}
-
-iframe {
-	max-width: 100%;
-}
-
-.small {
-	font-size: var(--small-font-size);
-}
-
-.responsive {
-	max-width: 100%;
-	height: auto;
-}
-
-.collapsed {
-	margin-top: 0;
-}
-
-.hidden {
-	visibility: hidden;
-	width: 0 !important;
-	height: 0 !important;
-	margin: 0 !important;
-	padding: 0 !important;
-	font-size: 0 !important;
-	border: none !important;
-}
-
-.hidden::before, .hidden::after, .hidden > * {
-	display: none !important;
-}
-
-
-/* LINKS */
-
-a {
-	cursor: pointer;
-	text-decoration: none;
-	background-color: transparent;
-	color: var(--link-color);
-}
-
-a:hover, a:active, a.active, a.current, a[aria-current="page"] {
-	color: var(--link-hover-color);
-}
-
-a.alt {
-	color: var(--link-alt-color);
-}
-
-a.alt:hover, a.alt:active, a.alt.active, a.alt.current, a.alt[aria-current="page"] {
-	color: var(--link-alt-hover-color);
-	text-decoration: underline;
-}
-
-a.right {
-	float: right;
-}
-
-
-/* FORMS */
-
-form {
-	margin: 0;
-}
-
-form * + * {
-	margin-top: 1em;
-}
-
-fieldset {
-	border: 1px solid var(--input-border-color);
-}
-
-legend {
-	font-size: var(--small-font-size);
-	padding: 0 5px;
-}
-
-label {
-	display: block;
-	font-size: var(--small-font-size);
-	font-weight: normal;
-}
-
-label + * {
-	margin-top: 5px;
-}
-
-input, textarea, select, button, .button {
-	display: inline-block;
-	width: 100%;
-	padding: calc(var(--input-font-size) * 0.5);
-	background: var(--body-background);
-	border: 1px solid var(--input-border-color);
-	font-family: inherit;
-	font-size: var(--input-font-size);
-	border-radius: var(--input-border-radius);
-	overflow: visible;
-	outline: none;
-	vertical-align: middle;
-	text-transform: none;
-}
-
-button, .button, [type="button"], [type="submit"], [type="reset"] {
-	background: var(--button-background);
-	border-color: var(--button-background);
-	border-radius: var(--button-border-radius);
-	color: var(--button-color);
-	text-align: center;
-	cursor: pointer;
-}
-
-button.alt, .button.alt, [type="button"].alt, [type="submit"].alt, [type="reset"].alt {
-	background: var(--button-alt-background);
-	color: var(--button-alt-color);
-	border-color: var(--button-alt-color);
-}
-
-.button {
-	line-height: 1.18;
-}
-
-textarea {
-	overflow: auto;
-	line-height: var(--body-line-height);
-	height: calc((var(--body-line-height) * 4em) + 1em);
-}
-
-form .field {
-	position: relative;
-}
-
-form .help {
-	font-size: var(--small-font-size);
-	font-style: italic;
-	margin-top: 5px;
-}
-
-form .checkbox-wrap {
-	display: inline-block;
-	margin-top: 8px;
-	margin-bottom: 8px;
-}
-
-form .show-password::before {
-	position: absolute;
-	top: 32px;
-	right: 5px;
-	content: '\1F441';
-	font-size: 32px;
-	margin: 0;
-	z-index: 2;
-	cursor: pointer;
-}
-
-form .has-error {
-	border: 1px solid var(--input-error-color);
-}
-
-form .error {
-	margin-top: 5px;
-	color: var(--input-error-color);
-}
-
-form .field .error {
-	font-size: var(--small-font-size);
-}
-
-input:hover, textarea:hover, select:hover {
-	border-color: var(--input-hover-color);
-}
-
-input:focus, textarea:focus, select:focus {
-	border-color: var(--input-active-color);
-}
-
-button:hover, .button:hover, [type="button"]:hover, [type="submit"]:hover, [type="reset"]:hover {
-	color: var(--button-color);
-	text-decoration: none;
-	filter: brightness(110%);
-}
-
-button.alt:hover, .button.alt:hover, [type="button"].alt:hover, [type="submit"].alt:hover, [type="reset"].alt:hover {
-	color: var(--button-alt-color);
-	text-decoration: none;
-	filter: brightness(98%);
-}
-
-@media (min-width: 40em) {
-
-	button, .button, [type="button"], [type="submit"], [type="reset"] {
-		width: auto;
-	}
-
-	button + button, .button + .button {
-		margin-top: 0;
-		margin-left: 10px;
-	}
-
-}
-
-[type="radio"], [type="checkbox"] {
-	width: 24px;
-	height: 24px;
-	border: none;
-	cursor: pointer;
-	margin: 0;
-}
-
-[type="radio"] + label, [type="checkbox"] + label {
-	display: inline;
-	margin: 0 20px 0 6px;
-	vertical-align: middle;
-	font-size: 1em;
-	cursor: pointer;
-}
-
-[readonly], [readonly]:hover {
-	color: #5f5f5f;
-	background: #f0f0f0;
-}
-
-[disabled], [disabled]:hover {
-	opacity: 0.8;
-	color: #5f5f5f;
-	background: #f5f5f5;
-	cursor: not-allowed;
-}
-
-[hidden], template {
-	display: none;
-}
-
-
-/* LISTS */
-
-li {
-	margin-top: 0.6em;
-}
-
-
-/* TABLES */
-
-table {
-	width: 100%;
-	font-size: var(--small-font-size);
-}
-
-table, th, td {
-	border: 1px solid black;
-	border-collapse: collapse;
-}
-
-th {
-	background: #eee;
-	font-weight: bold;
-}
-
-th, td {
-	padding: 8px;
-	vertical-align: middle;
-}
-
-td.top {
-	vertical-align: top;
-}
-
-td.bottom {
-	vertical-align: bottom;
-}
-
-td.center {
-	text-align: center;
-}
-
-figure {
-	margin-left: 0;
-	margin-right: 0;
-}
-
-
-/* QUOTES */
-
-blockquote {
-	background: #f9f9f9;
-	border-left: 10px solid #ccc;
-	margin: 1.5em 10px;
-	padding: 0.5em 10px;
-	quotes: "\201C""\201D""\2018""\2019";
-}
-
-blockquote:before {
-	color: #ccc;
-	content: open-quote;
-	font-size: 4em;
-	line-height: 0.1em;
-	margin-right: 0.25em;
-	vertical-align: -0.4em;
-}
-
-blockquote p {
-	display: inline;
-	font-style: italic;
-}
-
-
-/* MAIN */
-
-main {
-	display: block;
-	padding-bottom: var(--footer-height);
-}
-
-
-/* FOOTER */
-
-footer {
-	width: 100%;
-	text-align: center;
-	min-height: var(--footer-height);
-	font-size: var(--small-font-size);
-}
-
-main + footer {
-	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 0;
-}
-
-
-/* NAV */
-
-nav {
-	position: relative;
-	background: transparent;
-	margin-top: 0;
-}
-
-nav * + * {
-	margin-top: 0;
-}
-
-nav a {
-    display: flex;
-	align-items: center;
-	text-align: left;
-	width: auto;
-	height: 45px;
-	padding: 0.8em;
-	line-height: 1.0;
-	color: var(--nav-color);
-	text-decoration: none;
-}
-
-nav a.child {
-	font-size: var(--small-font-size);
-	padding-left: 20px;
-}
-
-nav a:hover {
-	color: var(--nav-hover-color);
-	background: var(--nav-hover-background);
-}
-
-nav .icons {
-	position: relative;
-	background: transparent;
-}
-
-nav .icons a {
-	padding: 0;
-	height: auto;
-	color: inherit;
-	background: transparent;
-}
-
-nav .toggle {
-	display: block;
-	position: absolute;
-	top: 6px;
-	right: 10px;
-	cursor: pointer;
-	font-size: 32px;
-	font-style: normal;
-	background: transparent;
-}
-
-nav .toggle:after {
-	content: '\2807';
-}
-
-nav .menu {
-	position: absolute;
-	top: 40px; right: 24px;
-	min-width: 120px;
-	background: var(--nav-background);
-	border-radius: 2px;
-	box-shadow: 0 10px 6px -6px #777;
-	transition: transform 0.5s;
-	transform: scale(0,0);
-	transform-origin: top right;
-	z-index: 500;
-}
-
-nav.open .menu {
-	transform: scale(1,1);
-}
-
-nav .d {
-	display: none;
-}
-
-@media (min-width: 40em) {
-
-	nav {
-		position: relative;
-		font-size: var(--small-font-size);
-	}
-
-	nav a {
-		flex-grow: 1;
-		height: 100%;
-		text-align: center;
-	}
-
-	nav a.active {
-		color: var(--nav-active-color);
-		background: var(--nav-active-background);
-	}
-
-	nav .icons, nav .toggle {
-		display: none;
-	}
-
-	nav .menu {
-		display: flex;
-		align-items: center;
-		position: static;
-		height: 100%;
-		box-shadow: none;
-		transform: none;
-		transition: none;
-	}
-
-	nav .d {
-		display: flex;
-	}
-
-	nav .m {
-		display: none;
-	}
-
-}
-
-@media (min-width: 60em) {
-
-	nav {
-		font-size: 1em;
-	}
-
-}
-
-
-/* GRID */
-
-.grid {
-	--min: 1;
-	--mid: 2;
-	--max: 3;
-	--gap: 0px;
-	--top: 0px;
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: flex-start;
-	width: calc(100% + var(--gap));
-	margin: calc((-1 * var(--gap)) + var(--top)) 0 0 calc(-1 * var(--gap)) !important;
-}
-
-* + .grid {
-	--top: var(--body-vertical-rhythm);
-}
-
-.grid > * {
-	flex-basis: calc(calc(100% / var(--min)) - var(--gap));
-	margin: var(--gap) 0 0 var(--gap);
-	transform: translateX(0%);
-}
-
-@media (min-width: 40em) {
-
-	.grid > * {
-		flex-basis: calc(calc(100% / var(--mid)) - var(--gap));
-	}
-
-}
-
-@media (min-width: 60em) {
-
-	.grid > * {
-		flex-basis: calc(calc(100% / var(--max)) - var(--gap));
-	}
-
-}
-
-
-/* CAROUSEL */
-
-.carousel {
-	--nav-size: 1rem;
-	--nav-color: #333;
-	--nav-active-color: var(--link-hover-color);
-	position: relative;
-	overflow: hidden;
-}
-
-.carousel img {
-	user-select: none;
-	pointer-events: none;
-}
-
-.carousel .grid {
-	--gap: 20px;
-	grid-auto-flow:column; 
-	flex-flow: nowrap;
-	scroll-behavior: smooth;
-}
-
-.carousel .grid > * {
-	flex-shrink: 0;
-	flex-grow: 0;
-	transition: transform 300ms ease-in-out;
-}
-
-.carousel .nav {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background: transparent;
-}
-
-.carousel .nav .btn {
-	display: inline-block;
-	width: var(--nav-size);
-	height: var(--nav-size);
-	background: var(--nav-color);
-	border-radius: 50%;
-	margin-left: calc(var(--nav-size) / 1.5);
-	font-size: 0;
-	cursor: pointer;
-}
-
-.carousel .nav .btn:first-child {
-	margin-left: 0;
-}
-
-.carousel .nav .active {
-	background: var(--nav-active-color);
-}
-
-
-/* PAGINATION */
-
-.pagination {
-	display: flex;
-	justify-content: center;
-	list-style-type: none;
-	padding: 0;
-}
-
-.pagination a, .pagination .active, .pagination .current, .pagination .disabled {
-	padding: 8px 16px;
-	border: 1px solid #ddd;
-}
-
-.pagination .active, .pagination .current {
-	background: #f1f1f1;
-}
-
-.pagination .disabled, .pagination .disabled:hover {
-	cursor: default;
-	color: #bbb;
-}
-
-
-/* NOTICE */
-
-.notice {
-	position: relative;
-	padding: 12px;
-	border: 0px solid #000;
-	border-left-width: 4px;
-}
-
-.notice.pinned {
-	position: absolute;
-	top: 0; left: 0;
-}
-
-.notice.pinned.bottom {
-	top: initial;
-	bottom: 0;
-}
-
-.notice.success {
-	background: #DFF0D8;
-	border-color: #46b450;
-}
-
-.notice.error {
-	background: #F2DEDE;
-	border-color: #dc3232;
-}
-
-.notice.info {
-	background: #D9EDF7;
-	border-color: #00a0d2;
-}
-
-.notice.warn {
-	background: #FCF8E3;
-	border-color: #ffb900;
-}
-
-.notice .close {
-	font-size: 20px;
-	position: absolute;
-	top: 8px; right: 8px;
-}
-
-.notice .title {
-	font-size: 1.1em;
-	font-weight: bold;
-}
-
-.notice .close + .title {
-	margin-right: 15px;
-}
-
-
-/* OVERLAY */
-
-.overlay {
-	--head-height: 45px;
-	--head-background: #fff;
-	display: flex;
-	align-items: center;
-	position: fixed;
-	top: 0; left: 0;
-	width: 100%;
-	height: 100%;
-	padding: 0;
-	margin: 0;
-	background: rgba(0, 0, 0, 0.5);
-	z-index: 10000
-}
-
-.overlay .inner {
-	position: relative;
-	min-width: 50vw;
-	max-width: 95vw;
-	max-height: 95vh;
-	margin: auto;
-	color: #3c434a;
-	background: var(--body-background);
-	border-radius: 4px;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-}
-
-.overlay .head {
-	display: flex;
-	align-items: center;
-	font-size: 1.2em;
-	font-weight: bold;
-	padding: 15px;
-	height: var(--head-height);
-	margin: 0;
-	background: var(--head-background);
-}
-
-.overlay .body {
-	margin: 0;
-	padding: 15px;
-    overflow: auto;
-    max-height: calc(95vh - var(--head-height));
-}
-
-.overlay .close {
-	cursor: pointer;
-	font-size: 1.2em;
-	font-weight: normal;
-	margin: 0 0 0 auto;
-	padding-left: 20px;
-}
-
-
-/* CROPPED IMAGE */
-
-.crop {
-	--width: 100%;
-	--height: 200px;
-	--top: 50%;
-	--left: 50%;
-	position: relative;
-	display: block;
-	width: var(--width);
-	height: var(--height);
-	overflow: hidden;
-	opacity: 0.99;
-}
-
-.crop:before {
-	content: ""; 
-	display: block; 
-	padding-top: 100%;  
-}
-
-.crop img {
-    position: absolute;
-	top: var(--top);
-	left: var(--left);
-	transform: translate(calc(var(--left) * -1), calc(var(--top) * -1));
-	width: auto;
-	height: auto;
-	max-width: initial;
-	max-height: initial;
-	min-width: var(--width);
-	min-height: var(--height);
-	margin: 0;
-    border: 0;
-    z-index: 10;
-}
-
-
-/* COOKIE CONSENT */
-
-#cookie-consent {
-	--color: #fff;
-	--background: #323232;
-	position: fixed;
-	bottom: 0; left: 0;
-	width: 100%;
-	padding: 10px;
-	text-align: center;
-	font-size: var(--small-font-size);
-	background:var(--background);
-	color: var(--color);
-	z-index: 999;
-}
-
-#cookie-consent a {
-	color: var(--color);
-	padding-bottom: 3px;
-	border-bottom: 1px dotted var(--color);
-}
-
-#cookie-consent a:hover {
-	border-bottom: none;
-}
-
-#cookie-consent input, #cookie-consent button {
-	max-width: 200px;
-	width: auto;
-	height: auto;
-	padding: 5px 10px;
-	margin: 0 0 0 5px;
-	color: var(--background);
-	background: var(--color);
-}
-
-
-/* ANIMATE */
-
-.animate {
-	transition: transform 300ms ease-in-out, opacity 300ms ease-in-out;
-}
-
-.animate.none {
-	opacity: 0.99;
-}
-
-.static, .static * {
-	transition: none !important;
-}
-
-.fade.out, .fade.hidden {
-	opacity: 0;
-}
-
-.scale.out, .scale.hidden {
-	transform: scale3d(0, 0, 0);
-}
-
-.slide-from-left.out, .slide-from-left.hidden {
-	transform: translate3d(-100%, 0, 0);
-}
-
-.slide-from-right.out, .slide-from-right.hidden {
-	transform: translate3d(100%, 0, 0);
-}
-
-.slide-from-top.out, .slide-from-top.hidden {
-	transform: translate3d(0, -100%, 0);
-}
-
-.slide-from-bottom.out, .slide-from-bottom.hidden {
-	transform: translate3d(0, 100%, 0);
-}
-
-.bump-from-bottom.out, .bump-from-bottom.hidden {
-	opacity: 0;
-	transform: translate3d(0, 50px, 0);
-}
-
-
-/* ICONS: https://fontello.com */
-
-@font-face {
-	font-family: 'fontello';
-	font-weight: normal;
-	font-style: normal;
-	src: url('fonts/fontello.woff2?26687926') format('woff2'),
-		 url('fonts/fontello.woff?26687926') format('woff');
-}
-
-[class^="icon-"]:before, [class*=" icon-"]:before {
-	display: inline-block;
-	font-family: "fontello";
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	text-decoration: inherit;
-	text-align: center;
-	width: 1em;
-	line-height: 1em;
-	speak: never;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
-
-.icon-search:before { content: '\1f50d'; }
-.icon-email:before { content: '\2709'; }
-.icon-twitter:before { content: '\f099'; }
-.icon-facebook:before { content: '\f09a'; }
-.icon-linkedin:before { content: '\f0e1'; }
-.icon-youtube:before { content: '\f16a'; }
-.icon-instagram:before { content: '\f16d'; }
-.icon-pinterest:before { content: '\f231'; }
-.icon-whatsapp:before { content: '\f232'; }
-.icon-reddit:before { content: '\f281'; }
+@import url('base.css');
+@import url('classes.css');
+@import url('icons.css');
